--- a/src/app/views/profile-language/profile-language.component.html
+++ b/src/app/views/profile-language/profile-language.component.html
@@ -1,26 +1,40 @@
 <form class="contenedor" [formGroup]="idiomaForm" >
-  <div class="form-group">
+  <div class="form-group contenedorDatos">
+    <div class="row">
+      <div class="col-md-12">
     <label>Nombre</label>
-    <select formControlName="language" #language >
-      <option [ngValue]="">Elige una opción</option>
-      <option *ngFor="let lan of allLanguages" [ngValue]="lan.uid">
+    <select formControlName="language" #language class="form-control">
+      <option [value]="null">Elige una opción</option>
+      <option *ngFor="let lan of allLanguages" [value]="lan.uid">
         {{ lan.name }}
       </option>
     </select>
-    <label>Indique aquí el idioma</label>
-    <input type="text" (show)="language.selectedIndex === 4" class="form-control" #otro name="otro" id="otro"  formControlName="otro" required="" ">
+
+    <div id="oculto" *ngIf="language.value == 4">
+      <label>Indique aquí el idioma</label>
+      <input type="text" class="form-control" #otro name="otro" id="otro"  formControlName="otro" [required]="language.value == 4">
+    </div>
+    </div>
+    </div>
+    <div class="row">
+      <div class="col-md-12">
     <label>Nivel</label>
-    <select formControlName="nivel" #nivel>
-      <option [ngValue]="">Elige una opción</option>
-      <option *ngFor="let niv of allNiveles" [ngValue]="niv.uid">
+    <select formControlName="nivel" #nivel class="form-control">
+      <option [value]="">Elige una opción</option>
+      <option *ngFor="let niv of allNiveles" [value]="niv.uid">
         {{ niv.name }}
       </option>
     </select>
+    </div>
+    </div>
+    <div class="row">
+      <div class="col-md-12">
     <label>Fecha del título</label>
     <input type="text"  class="form-control" #date name="date" id="date"  formControlName="date" placeholder="dd/mm/yyyy">
     <div class="d-flex justify-content-center mt-3 login_container salto">
-      <button type="submit" class="btn" [disabled]="!estudioForm.valid" >Guardar</button>
-      <!--(click)="anadirAve(bird_name.value, bird_description.value, place.value, lat.value, long.value, $event)"-->
+      <button type="submit" class="btn" [disabled]="!idiomaForm.valid" (click)="editOrSave(idiomaForm)">Guardar</button>
+    </div>
+      </div>
     </div>
   </div>
 </form>
