PEC 5 Ejercicio 4 Desplegar una aplicación Angular en GitHub

--- a/src/app/views/profile/profile-student/study/profile-study.component.html
+++ b/src/app/views/profile/profile-student/study/profile-study.component.html
@@ -1,4 +1,4 @@
-<form fxFlex  [formGroup]="rForm" (ngSubmit)="submit()">
+<form fxFlex  [formGroup]="rForm" >
   <div fxFlex  fxlayout="row" fxlayout.lt-md="column">
     <div fxFlexFill>
       <mat-form-field class="w-40">
